--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,9 +45,8 @@ brews:
     name: hazelcast-commandline-client
 
     tap:
-      owner: hazelcast
+      owner: utku-caglayan
       name: homebrew-hz
-      branch: "hzc-{{ .Tag }}"
 
       # Optionally a token can be provided, if it differs from the token provided to GoReleaser
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
