--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,20 +45,20 @@ brews:
     name: hazelcast-commandline-client
 
     tap:
-      owner: hazelcast
+      owner: utku-caglayan
       name: homebrew-hz
 
     # Template for the url which is determined by the given Token (github, gitlab or gitea)
     #
     # Default depends on the client.
-    url_template: "https://github.com/hazelcast/hazelcast-commandline-client/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    url_template: "https://github.com/utku-caglayan/hazelcast-commandline-client/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
 
     # The project name and current git tag are used in the format string.
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
 
     # Your app's homepage.
     # Default is empty.
-    homepage: "https://github.com/hazelcast/hazelcast-commandline-client"
+    homepage: "https://github.com/utku-caglayan/hazelcast-commandline-client"
 
     # Template of your app's description.
     # Default is empty.
